sm8250-common: Bring back charge_only_mode
* S binary doesn't need memset shim

This partially reverts commit 6b40973016c9de61b8beb7e38f5eb61564c086c0.

--- a/rootdir/etc/init.mmi.charge_only.rc
+++ b/rootdir/etc/init.mmi.charge_only.rc
@@ -1,10 +1,26 @@
+on property:ro.boot.mode=charger
+    setprop sys.usb.configfs 1
+    setprop sys.usb.config charging
+
 on charger
+    trigger early-fs
+    trigger fs
+    trigger post-fs
+    trigger late-fs
+    trigger post-fs-data
+    trigger moto-charger
+    class_stop main
+    class_stop late_start
+
+on moto-charger
     stop vendor.sensors
     chown radio wakelock /sys/power/wake_lock
     chmod 0660 /sys/power/wake_lock
     chown radio wakelock /sys/power/wake_unlock
     chmod 0660 /sys/power/wake_unlock
 
+    trigger firmware_mounts_complete
+    start vendor.charge_only_mode
     start vendor.thermal-com
     start system_suspend
 
@@ -22,6 +38,11 @@ on charger
     # Allow system to sleep when in COM
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
     write /proc/sys/kernel/sched_boost 0
+
+service vendor.charge_only_mode /vendor/bin/charge_only_mode
+    user root
+    group graphics system input
+    disabled
 
 service vendor.thermal-com /vendor/bin/thermal-engine --minimode
     class charger
